# malloc

./: .gitignore  CMakeLists.txt  Makefile  README.md  main_test  show_test
includes/: malloc.h
libft/: Makefile  libft.h
sources/: .realloc.c.swp  free.c  malloc.c  realloc.c  show_alloc_mem.c
sources/aligners/: page_align.c  ptr_align.c
sources/allocating/: new_alloc.c  new_block.c  new_heap.c  split_block.c
sources/checker/: check_free_block.c  check_free_heap.c
sources/listing/: delete_block.c  delete_heap.c  find_by_ptr.c  find_by_type.c  find_free.c  find_last_heap.c  push_block.c  push_heap.c
sources/tools/: ft_malloc.c  get_preload.c  print_addr.c  putnbr.c  singleton.c
tests/: BaremeMalloc.txt  main.c  main_tests.c  show_test.c  test1.c  test3.c  test3bis.c  test4.c  test5.c
